# noasr

./: .gitignore  HUMANS.md  README.md  launcher_windows.ps1  pyproject.toml
.sisyphus/: ralph-loop.local.md
.sisyphus/plans/: noasr-mvp-architecture.md
docs/: prompt.txt  tavily.md
src/noasr/: __init__.py  __main__.py  agent.py  audio.py  client.py  config.py  constants.py  hotkey.py  injector.py  lock.py  main.py  models.py  overlay.py  platform.py  regex.py
src/noasr/assets/: __init__.py  config.json  input_system_prompt.md  input_user_prompt.md  transcript_system_prompt.md  transcript_user_prompt.md
src/noasr/tools/: __init__.py  datetime.py  tavily.py
tests/: __init__.py  test_agent.py  test_audio.py  test_client.py  test_config.py  test_hotkey.py  test_injector.py  test_integration.py  test_lock.py  test_main.py  test_models.py  test_overlay.py  test_packaging.py  test_platform.py  test_regex.py  test_scaffold.py  test_tavily.py  test_tools.py
